@@ -8,7 +8,7 @@
 <h1>libircclient Data Structures</h1>Here are the data structures with brief descriptions:<table>
   <tr><td class="indexkey"><a class="el" href="structirc__callbacks__t.html">irc_callbacks_t</a></td><td class="indexvalue">Event callbacks structure </td></tr>
 </table>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:06 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
