@@ -14,7 +14,7 @@
   <tr><td class="indexkey"><a class="el" href="libirc__rfcnumeric_8h.html">libirc_rfcnumeric.h</a></td><td class="indexvalue">This file defines RFC numeric reply codes, which should be used in ::event_numeric callback. Every code also has a comment regarding its arguments </td></tr>
   <tr><td class="indexkey"><a class="el" href="libircclient_8h.html">libircclient.h</a></td><td class="indexvalue">This file defines all prototypes and functions to use libircclient </td></tr>
 </table>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:06 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
