@@ -30,7 +30,7 @@
 : <a class="el" href="structirc__callbacks__t.html#o7">irc_callbacks_t</a><li>event_umode
 : <a class="el" href="structirc__callbacks__t.html#o6">irc_callbacks_t</a><li>event_unknown
 : <a class="el" href="structirc__callbacks__t.html#o16">irc_callbacks_t</a></ul>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:06 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
