@@ -18,7 +18,7 @@
 : <a class="el" href="group__events.html#ga3">libirc_events.h</a><li>irc_eventcode_callback_t
 : <a class="el" href="group__events.html#ga1">libirc_events.h</a><li>irc_session_t
 : <a class="el" href="libircclient_8h.html#a1">libircclient.h</a></ul>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:07 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
