@@ -168,7 +168,7 @@ Most times in reply to your actions the IRC server generates numeric callbacks. 
 Every event has origin, though the <em>origin</em> variable may be NULL, which means that event origin is unknown. The origin usually looks like nick!host@ircserver, i.e. like tim!home@irc.krasnogorsk.ru. Such origins can not be used in IRC commands, and need to be stripped (i.e. host and server part should be cut off) before using. This can be done either explicitly, by calling <a class="el" href="group__nnparse.html#ga0">irc_target_get_nick()</a>, or implicitly for all the events - by setting the <a class="el" href="group__options.html#ga1">LIBIRC_OPTION_STRIPNICKS</a> option with <a class="el" href="group__options.html#ga2">irc_option_set()</a>.     </td>
   </tr>
 </table>
-<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:18:37 2004 for libircclient by
+<hr size="1"><address style="align: right;"><small>Generated on Sun Oct 10 20:25:06 2004 for libircclient by
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border=0 ></a> 1.3.8 </small></address>
 </body>
